--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  cursor: url(assets/cursor/normal.png), auto;
+  cursor: url(../assets/cursor/normal.png), auto;
 }
 body:not(.bodyDonate) {
   background-color: #558ed9;
@@ -11,7 +11,7 @@ body:not(.bodyDonate) {
   margin: auto;
 }
 a {
-  cursor: url(assets/cursor/link.png), auto;
+  cursor: url(../assets/cursor/link.png), auto;
 }
 header:not(eN) {
   overflow: hidden;
@@ -289,7 +289,7 @@ footer {
   display: flex;
   position: relative;
   justify-content: space-evenly;
-  background-image: url(assets/banner.jpg);
+  background-image: url(../assets/banner.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -357,7 +357,7 @@ footer {
 .eN {
   width: 100vw;
   height: 25vh;
-  background-image: url(assets/banner.jpg);
+  background-image: url(../assets/banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -593,7 +593,7 @@ iframe.focus {
   display: block;
   margin-bottom: 15px;
   box-shadow: 0 0 6 rgba(0, 0, 0, 0.5%);
-  background-image: url(assets/open-pokeball.png);
+  background-image: url(../assets/open-pokeball.png);
   background-repeat: no-repeat;
   background-position: bottom;
 }
@@ -720,7 +720,7 @@ iframe.focus {
 }
 .bodyDonate {
   font-family: "Quicksand", sans-serif;
-  background-image: url(assets/backDonate.jpg);
+  background-image: url(../assets/backDonate.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   max-width: 1920px;
@@ -938,7 +938,7 @@ overflow: hidden;
     display: flex;
     margin-bottom: 15px;
     box-shadow: 0 0 6 rgba(0, 0, 0, 0.5%);
-    background-image: url(assets/open-pokeball.png);
+    background-image: url(../assets/open-pokeball.png);
     background-repeat: no-repeat;
     background-position: bottom;
   }
@@ -963,7 +963,7 @@ overflow: hidden;
   }
   .bodyDonate {
     font-family: "Quicksand", sans-serif;
-    background-image: url(assets/backDonate.jpg);
+    background-image: url(../assets/backDonate.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
@@ -1116,7 +1116,7 @@ overflow: hidden;
     display: flex;
     margin-bottom: 15px;
     box-shadow: 0 0 6 rgba(0, 0, 0, 0.5%);
-    background-image: url(assets/open-pokeball.png);
+    background-image: url(../assets/open-pokeball.png);
     background-repeat: no-repeat;
     background-position: bottom;
   }
@@ -1212,7 +1212,7 @@ overflow: hidden;
     display: flex;
     margin-bottom: 15px;
     box-shadow: 0 0 6 rgba(0, 0, 0, 0.5%);
-    background-image: url(assets/open-pokeball.png);
+    background-image: url(../assets/open-pokeball.png);
     background-repeat: no-repeat;
     background-position: bottom;
   }
