--- a/css/styles.css
+++ b/css/styles.css
@@ -725,6 +725,9 @@ iframe.focus {
   background-size: 100% 100%;
   max-width: 1920px;
 }
+#donadores{
+  text-align: center;
+}
 /*lineas especificas loader*/
 /*lineas especificas loader*/
 /*lineas especificas loader*/
