--- a/css/styles.css
+++ b/css/styles.css
@@ -728,6 +728,9 @@ iframe.focus {
 #donadores{
   text-align: center;
 }
+.dolar{
+  text-align: center;
+}
 /*lineas especificas loader*/
 /*lineas especificas loader*/
 /*lineas especificas loader*/
